--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -264,7 +264,7 @@
   --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f0fdf4 */
   --color-primary-100: rgb(var(--tw-color-primary-100)); /* #dcfce7 */
   --color-primary-200: rgb(var(--tw-color-primary-200)); /* #bbf7d0 */
-  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #86efac */
+  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #8BD8BD */
   --color-primary-400: rgb(var(--tw-color-primary-400)); /* #4ade80 */
   --color-primary-500: rgb(var(--tw-color-primary-500)); /* #22c55e */
   --color-primary-600: rgb(var(--tw-color-primary-600)); /* #16a34a */
