--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,9 +31,9 @@
 @layer base {
   /* inter var - latin */
   @font-face {
-    font-family: 'Inter';
+    font-family: 'Blinker';
     font-style: normal;
-    font-weight: 100 900;
+    font-weight: 100 600 700 900;
     font-display: optional;
     src: url('/fonts/inter-var-latin.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -115,4 +115,32 @@
   .animated-underline:focus-visible {
     background-size: 0 2px, 100% 2px;
   }
+}
+
+.btn-hover {
+  background-size: 200% 100%;
+  moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.btn-hover:hover {
+  background-position: 100% 0;
+  moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.btn-hover:focus {
+  outline: none;
+}
+
+.color-1 {
+  background-image: linear-gradient(73deg, #8bd8bd, #1369a5, #3dab84);
+}
+
+.laptop-shadow {
+  filter: drop-shadow(-40px 50px 4rem #8bd8bd20);
 }
