--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -141,6 +141,10 @@
   background-image: linear-gradient(73deg, #8bd8bd, #1369a5, #3dab84);
 }
 
+.colorContact {
+  background-image: linear-gradient(45deg, #3dab84, #1369a5);
+}
+
 .laptop-shadow {
   filter: drop-shadow(-40px 50px 4rem #8bd8bd20);
 }
