feat(fix-deploy): remove semicolon

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* remove unused */
 
 :root {
   /* #region  /**=========== Primary Color =========== */
