--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -202,3 +202,17 @@
     background: transparent;
   }
 }
+
+#style-3::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f506;
+}
+
+#style-3::-webkit-scrollbar {
+  width: 6px;
+  background-color: #f5f5f506;
+}
+
+#style-3::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
